--- a/front/src/style/navbar.module.css
+++ b/front/src/style/navbar.module.css
@@ -1,4 +1,9 @@
 /**/
+
+.wrapper {
+    z-index: 100;
+    /* position: fixed; */
+}
 /*positionner le logo au centre*/
 .navbar {
     display: flex;
@@ -18,8 +23,8 @@
     justify-content: space-between;
     height: 40px;
     border-top: 1px solid rgb(227, 226, 226);
-    border-bottom: 1px solid rgb(216, 181, 93);
-    border-top: 1px solid rgb(216, 181, 93);
+    border-bottom: 1px solid rgb(221, 198, 154);
+    border-top: 1px solid rgb(221, 198, 154);
     margin: 20px 120px;
     padding-right: 16px;
     padding-left: 16px;
@@ -42,7 +47,7 @@ a {
 
 /*mettre le bouton en surbrillance*/
 .btn:hover {
-    background-color: rgb(216, 181, 93);
+    background-color: rgb(221, 198, 154);
     color: white;
     font-weight: 300;
 }
