--- a/front/src/style/home.module.css
+++ b/front/src/style/home.module.css
@@ -123,15 +123,18 @@
     flex-direction: column;
     text-align: left;
     color: rgb(93, 88, 88);
-    margin: 20px 230px 10px 230px;
+    margin: 60px 230px 10px 230px;
 }
 
 .title {
     justify-content: left;
-    margin-bottom: 15px;
-    font-size: 19px;
-    font-style: italic;
+    margin-bottom: 20px;
+    font-size: 21px;
     color: rgb(63, 62, 62);
+}
+
+.text {
+    margin-bottom: 60px;
 }
 
 .contact {
@@ -139,14 +142,13 @@
     flex-direction: row;
     color: rgb(63, 62, 62);
     justify-content: space-around;
-    margin: 30px 0px 20px 0px;
-    border-top: 1px solid rgb(221, 198, 154);
-    border-bottom: 1px solid rgb(221, 198, 154);
+    margin: 0px 0px 20px 0px;
+    background-color: rgb(221, 198, 154);
 }
 
 .tel {
     display: flex;
-    margin: 9px 0px 9px 10px;
+    margin: 20px 0px 20px 10px;
 }
 
 .img {
@@ -156,5 +158,26 @@
 }
 
 .client {
-    margin: 9px 0px 9px 0px;
+    margin: 20px 0px 20px 0px;
 }
+
+.footer{
+    display: flex;
+    justify-content: space-around;
+    margin: 50px 0px 50px 0px;
+    color: rgb(63, 62, 62);
+}
+
+.footer a {
+    text-decoration: none;
+    padding: 7px 0px 0px 0px;
+    color: rgb(63, 62, 62);
+
+}
+
+.information {
+    display: flex;
+    flex-direction: column;
+}
+
+
