--- a/front/src/style/login.module.css
+++ b/front/src/style/login.module.css
@@ -1,21 +1,28 @@
+.jclogo {
+  display: flex;
+  justify-content: center;
+  margin: 60px 0px 20px 0px;
+}
+
 .logo {
-    position: sticky;
-    margin: 10px;
     height: 180px;
-    border-bottom: 1px solid rgb(216, 181, 93);;
-    border-radius: 25px;
+    border-radius: 10px;
+  }
+
+  .bcontainer {
+    display: flex;
+    justify-content: center;
   }
 
   .container {
-    font-weight: 300;
-    max-width: 380px;
-    margin: -33px auto;
-    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding: 25px 30px 5px 30px;
     border-radius: 16px;
-    border:1px solid  rgb(216, 181, 93);
-    color: black;
-    background-color: rgb(255, 252, 248);
+    border:1px solid  rgb(221, 198, 154);
+    color: rgb(93, 88, 88);
+    background-color: rgb(242, 241, 239);
   }
   
   .container h1 {
@@ -23,31 +30,29 @@
     font-weight: 300;
     letter-spacing: 0.2em;
     margin-bottom: 50px;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    margin-left: 33px;
   }
   
   .container label,
   .container .error {
-    display: block;
-    text-align: left;
-    font-size: 16px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px; 
   }
   
   .container label {
-    margin: 20px 0 5px 35px;
+    margin: 20px 0px 20px 0px;
   }
   
   .error {
-    margin: 5px 0 -17px 5px;
+    margin: 10px 0px 0px 0px;
+    color: rgb(219, 35, 35);
+    font-weight: 300;
   }
   
   .container input {
-    width: 70%;
-    border: 1px solid rgb(216, 181, 93);
+    width: 80%;
+    border: 1px solid rgb(221, 198, 154);
     border-radius: 10px;
-    padding: 15px 20px;
-    height: 7px;
+    padding: 16px 50px 0px 0px;
   }
   
   .container input:focus {
@@ -59,7 +64,7 @@
     margin: 32px auto;
     padding: 10px 20px;
     border-radius: 10px;
-    border: 1px solid rgb(216, 181, 93) ;
+    border: 1px solid rgb(221, 198, 154);
     font-size: 14px;
     font-weight: 500;
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -67,7 +72,7 @@
   }
   
   .container .btn:hover {
-    background-color: rgb(216, 181, 93);
+    background-color: rgb(221, 198, 154);
     color: white;
   }
   
@@ -77,12 +82,5 @@
   }
   
    .more .link {
-    color: rgb(199, 167, 86)
-  }
-  
-  .errorLogin {
-    font-size: 12px;
-    color: red;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    padding-top: 10px;
+    color: rgb(170, 142, 73)
   }
