--- a/front/src/style/home.module.css
+++ b/front/src/style/home.module.css
@@ -129,7 +129,7 @@
 }
 
 .garantie {
-    padding: 9px 0px 0px 10px;
+    padding: 20px 0px 0px 10px;
 }
 
 /*mise en page du texte*/
@@ -168,9 +168,16 @@
 }
 
 .img {
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 60px;
     padding: 4px 15px 0px 50px;
+}
+
+.img_tel {
+    height: 35px;
+    width: 35px;
+    padding: 1px 25px 0px 50px;
+
 }
 
 .client {
@@ -196,3 +203,27 @@
     display: flex;
     flex-direction: column;
 }
+
+/*RESPONSIVE*/
+
+@media screen and (max-width: 800px) {
+    .bandeau, .atout, .img_tel, .information {
+display: none;    }
+  }
+  
+
+  @media screen and (max-width: 800px) {
+    .atout {
+display: none;    }
+  }
+
+  @media screen and (max-width: 800px) {
+    .presentation, .devis {
+        margin-left: 1%;
+        margin-right: 1%;
+   }
+  }
+
+
+  
+  
