--- a/front/src/style/navbar.module.css
+++ b/front/src/style/navbar.module.css
@@ -4,6 +4,7 @@
     z-index: 100;
     /* position: fixed; */
 }
+
 /*positionner le logo au centre*/
 .navbar {
     display: flex;
@@ -25,7 +26,7 @@
     border-top: 1px solid rgb(227, 226, 226);
     border-bottom: 1px solid rgb(221, 198, 154);
     border-top: 1px solid rgb(221, 198, 154);
-    margin: 20px 120px;
+    margin: 20px 6%;
     padding-right: 16px;
     padding-left: 16px;
 }
@@ -36,7 +37,8 @@ a {
 }
 
 /*styliser les boutons*/
-.btn {
+.btn,
+.btn_lc {
     color: rgb(93, 88, 88);
     padding: 5px;
     height: 20px;
@@ -44,6 +46,8 @@ a {
     border-radius: 4px;
     margin-top: 5px;
 }
+
+
 
 /*mettre le bouton en surbrillance*/
 .btn:hover {
@@ -69,14 +73,14 @@ a {
 /*RESPONSIVE*/
 
 @media screen and (max-width: 800px) {
+
+    .logos,
+    .btn_lc {
+        display: none
+    }
+
     .container {
         margin-left: 2%;
         margin-right: 2%;
-   }
-  }
-
-  @media screen and (max-width: 800px) {
-    .logos {
-       display: none;
-   }
-  }
+    }
+}
