--- a/front/src/style/profil.module.css
+++ b/front/src/style/profil.module.css
@@ -2,21 +2,21 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-
 }
 
 .info {
-    margin-left: 50px;
+    margin-left: 6%;
     display: flex;
     flex-direction: column;
-    width: 420px;
+    width: 30%;
 }
 
 .container label {
     display: block;
     text-align: left;
     font-size: 17px;
-    padding-bottom: 5px;
+    color: rgb(79, 75, 75);
+    padding-bottom: 7px;
     padding-top: 12px;
 }
 
@@ -24,22 +24,20 @@
     color: rgb(79, 75, 75);
     display: block;
     text-align: left;
-    font-size: 16px;
     margin-left: 30px;
-    /* border-bottom: 1px solid rgb(228, 228, 228); */
     padding-bottom: 3px;
 }
 
 .update {
-    border: none;
-    background-color: white; 
+    background-color: white;
     border: 1px solid rgb(221, 198, 154);
     border-radius: 4px;
     width: 70px;
+    margin-right: 5px;
 }
 
 .update:hover {
-background-color: rgb(221, 198, 154);
+    background-color: rgb(221, 198, 154);
 }
 
 .champ {
@@ -52,4 +50,8 @@ background-color: rgb(221, 198, 154);
     border-radius: 4px;
     border: 1px solid rgb(221, 198, 154);
     padding-bottom: 3px;
+}
+
+.info_update {
+    margin-top: 20px;
 }
