--- a/front/src/style/a_boutique.module.css
+++ b/front/src/style/a_boutique.module.css
@@ -19,11 +19,11 @@
     padding-left: 1%;
     padding-right: 1%;
 }
+
 .create {
     border: 1px solid rgb(221, 198, 154);
     border-radius: 4px;
     width: 40%;
-    padding-left: 1%;
     padding-right: 1%;
     display: flex;
     flex-direction: column;
@@ -43,9 +43,9 @@
 
 .theme {
     display: flex;
-    width: 80%;
+    width: 90%;
     justify-content: space-between;
-    margin-bottom: 1%;
+    margin-bottom: 10px;
     padding: 0% 7% 0% 7%;
 }
 
@@ -63,14 +63,54 @@
 }
 
 .titre {
-    width: 80%;
+    width: 90%;
     display: flex;
     justify-content: space-between;
     padding: 0% 7% 0% 7%;
-
+    margin-bottom: 10px;
 }
 
-.create input {
+.input {
     border: none;
-    border-bottom: 1px solid rgb(15, 14, 13);
+    border-bottom: 1px solid rgb(118, 114, 110);
 }
+
+.description {
+    width: 90%;
+    margin-left: 7.1%;
+    resize: none;
+    border: 1px solid rgb(221, 198, 154);
+    height: 100px;
+    margin-bottom: 10px;
+
+}
+
+.preview {
+    height: 200px;
+    width: 200px;
+    border: 1px solid rgb(189, 188, 188);
+    border-radius: 4px;
+}
+
+.picture {
+    margin-left: 7.3%;
+    margin-bottom: 20px;
+    border: none;
+}
+
+
+.button {
+    display: flex;
+    justify-content: end;
+    margin-bottom: 10px;
+}
+.create button {
+    width: 50px;
+    height: 25px;
+    border: 1px solid rgb(221, 198, 154);
+}
+
+.create button:hover {
+    background-color: rgb(221, 198, 154);
+}
+
