--- a/front/src/style/a_boutique.module.css
+++ b/front/src/style/a_boutique.module.css
@@ -1,248 +1,247 @@
 .wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 6%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 6%;
 }
 
 .container {
-    margin-top: 2%;
-    width: 88%;
-    display: flex;
-    justify-content: space-between;
-    color: rgb(93, 88, 88);
+  margin-top: 2%;
+  width: 88%;
+  display: flex;
+  justify-content: space-between;
+  color: rgb(93, 88, 88);
 }
 
 .categorie {
-    border: 1px solid rgb(221, 198, 154);
-    border-radius: 4px;
-    width: 15%;
-    padding-left: 1%;
-    padding-right: 1%;
+  border: 1px solid rgb(221, 198, 154);
+  border-radius: 4px;
+  width: 15%;
+  padding-left: 1%;
+  padding-right: 1%;
 }
+
+.add {
+  display: flex;
+  justify-content: space-between;
+/* margin-right: 20%; */
+}
+
+.add input {
+  border: none;
+  border-bottom: 1px solid rgb(221, 198, 154);
+}
+
+.add button {
+  border: none;
+  background-color: white;
+  font-size: 30px;;
+}
+
+
 
 .create {
-    border: 1px solid rgb(221, 198, 154);
-    border-radius: 4px;
-    width: 40%;
-    padding-right: 1%;
-    display: flex;
-    flex-direction: column;
+  border: 1px solid rgb(221, 198, 154);
+  border-radius: 4px;
+  width: 40%;
+  padding-right: 1%;
+  display: flex;
+  flex-direction: column;
 }
 
-.create button, select {
-    background-color: transparent;
-    border-radius: 4px;
+.create button,
+select {
+  background-color: transparent;
+  border-radius: 4px;
 }
 
 .display {
-    border: 1px solid rgb(221, 198, 154);
-    border-radius: 4px;
-    width: 25%;
+  border: 1px solid rgb(221, 198, 154);
+  border-radius: 4px;
+  width: 25%;
 }
 
 .title {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    text-align: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  text-align: center;
 }
 
 .theme {
-    display: flex;
-    width: 90%;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    padding: 0% 7% 0% 7%;
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  padding: 0% 7% 0% 7%;
 }
 
 .select {
-    margin-left: 5%;
-    border: 1px solid rgb(221, 198, 154);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    color: rgb(52, 48, 48);
-    font-size: 15px;
-    padding: 2px 2px 2px 2px;
-    width: 70px;
-    text-align: center;
+  margin-left: 5%;
+  border: 1px solid rgb(221, 198, 154);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  color: rgb(52, 48, 48);
+  font-size: 15px;
+  padding: 2px 2px 2px 2px;
+  width: 70px;
+  text-align: center;
 }
 
 .titre {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0% 7% 0% 7%;
-    margin-bottom: 10px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0% 7% 0% 7%;
+  margin-bottom: 10px;
 }
 
 .input {
-    border: none;
-    border-bottom: 1px solid rgb(118, 114, 110);
+  border: none;
+  border-bottom: 1px solid rgb(118, 114, 110);
 }
 
 .description {
-    width: 90%;
-    margin-left: 7.1%;
-    resize: none;
-    border: 1px solid rgb(221, 198, 154);
-    height: 100px;
-    margin-bottom: 10px;
+  width: 90%;
+  margin-left: 7.1%;
+  resize: none;
+  border: 1px solid rgb(221, 198, 154);
+  height: 100px;
+  margin-bottom: 10px;
 
 }
 
 .preview {
-    height: 200px;
-    width: 200px;
-    border: 1px solid rgb(189, 188, 188);
-    border-radius: 4px;
+  height: 200px;
+  width: 200px;
+  border: 1px solid rgb(189, 188, 188);
+  border-radius: 4px;
 }
 
 .picture {
-    margin-left: 7.3%;
-    margin-bottom: 20px;
-    border: none;
+  margin-left: 7.3%;
+  margin-bottom: 20px;
+  border: none;
 }
 
 
 .button {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 10px;
-    background-color: white;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+  background-color: white;
 }
 
 .create button {
-    width: 50px;
-    height: 25px;
-    border: 1px solid rgb(221, 198, 154);
+  width: 50px;
+  height: 25px;
+  border: 1px solid rgb(221, 198, 154);
 }
 
 .create button:hover {
-    background-color: rgb(221, 198, 154);
+  background-color: rgb(221, 198, 154);
 }
 
 /*TABLEAU DES PRDOUITS*/
 
 .tableau {
-    width: 90%;
-    padding: 10px 20px;
-    margin: 0 auto;
-    margin-top: 20px;
+  width: 100%;
+  margin-top: 2%;
+  margin-left: 3%;
     color: rgb(93, 88, 88);
-  }
-  
-  .tableau .tableau2{
-    display: inline-block;
-    border-radius: 10px;
-    overflow: hidden;
-    margin: 0px auto 30px auto;
-    max-width: 80%;
-    /* background-color: rgb(253, 253, 253); */
-    filter: drop-shadow(3px 3px 10px rgba(0, 0, 0, 0.05));
-  }
-  
-  .tableau table {
-    table-layout: fixed;
-    width: 100%;
-    margin: -5px auto;
-    text-align: left;
-    font-weight: 300;
-    font-size: 16px;
-    border-spacing: 0px 3px;
-  }
+}
 
-  .tableau thead {
-    background-color: white;
-  }
-  
-  .tableau tbody {
-    margin-bottom: 10px;
-  }
-  
-  .tableau tbody tr {
-    background-color:white;
-    color: rgb(37, 37, 37);
-    font-size: 14px;
-  }
-  
-  .tableau .see tbody tr:hover {
-    box-shadow: inset 3px 0px 0px 0px var(--blue3);
-    background-color: rgb(249, 249, 249);
-    color: rgb(37, 37, 37);
-  }
-    
-  .tableau th,
-  .tableau td {
-    padding: 7px 10px;
-    overflow: auto;
-    text-overflow: ellipsis;
-    border-top: 1px solid rgb(221, 198, 154);
-  }
-    
-.tableau .button {
-  margin: 0 3px;
-  padding: 5px;
-  border-radius: 8px;
-  border: solid 1px rgb(216, 181, 93);;
+.tableau .tableau2 {
+  display: inline-block;
+  max-width: 100%;
+}
+
+.tableau2 table {
+  table-layout:fixed;
+  width: 100%;
+  font-weight: 300;
+  font-size: 16px;
+  border-spacing: 0px 3px;
+}
+
+.tableau thead {
   background-color: white;
 }
 
+.tableau tbody tr {
+  background-color: white;
+  color: rgb(37, 37, 37);
+  font-size: 14px;
+}
 
-  .tableau ul {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .tableau .see input {
-    background-color: var(--grey0);
-    border-radius: 5px;
-    padding: 5px;
-    width: 95%;
-  }
-  
-  .tableau .create input {
-      background-color:  var(--grey0);
-      padding: 5px;
-      border-radius: 5px;
-      width: 95%;
-  }
-  
-  .tableau label {
-    margin: 5px 25px 0 5px;
-  }
-  
-  .tableau tr input{
-    border: solid 1px rgb(216, 181, 93);
-    border-radius: 15px;
-    width: 90%;
-  }
+.tableau .see tbody tr:hover {
+  box-shadow: inset 3px 0px 0px 0px var(--blue3);
+  background-color: rgb(249, 249, 249);
+  color: rgb(37, 37, 37);
+}
 
-  .tableau .radio{
-    display: flex;
-  }
-  .tableau .editing{
-    padding: 5px;
-    width: 40px;
-  }
-  .tableau .radio input{
-    width: 20px;
-  }
+.tableau th,
+.tableau td {
+  padding: 5px 10px;
+  overflow: auto;
+  text-overflow: ellipsis;
+  text-align: center;
+  border-top: 1px solid rgb(221, 198, 154);
+}
 
+.tableau .button {
+  margin: 9px 3px;
+  padding: 5px;
+  border-radius: 8px;
+  border: solid 1px rgb(221, 198, 154);
+  background-color: white;
+  color: rgb(93, 88, 88);
+}
 
+.tableau .button:hover {
+  background-color: rgb(221, 198, 154);
+}
 
-  .id {
-      width: 40px;
-  }
+.tableau .see input {
+  border-radius: 5px;
+  padding: 5px;
+  width: 90%;
+}
 
-  .gestion {
-      width: 100px;
-  }
+.tableau .create input {
+  background-color: var(--grey0);
+  padding: 5px;
+  border-radius: 5px;
+  width: 95%;
+}
 
-  .message {
-    margin-bottom: 15px;
-    font-weight: 300;
-    color: rgb(194, 3, 3);
-  }
-  
+.tableau label {
+  margin: 5px 25px 0 5px;
+}
+
+.tableau tr input {
+  border: solid 1px rgb(216, 181, 93);
+  border-radius: 15px;
+  width: 90%;
+}
+
+.id {
+  width: 2%;
+}
+
+.cell {
+  width: 5%;
+}
+
+.gestion {
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+  ;
+}
+
+.message {
+  font-weight: 300;
+  color: rgb(194, 3, 3);
+}
