--- a/front/src/style/boutique.module.css
+++ b/front/src/style/boutique.module.css
@@ -3,3 +3,13 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+@media screen and (max-width: 800px) {
+
+    .cards {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+}
