--- a/front/src/style/card.module.css
+++ b/front/src/style/card.module.css
@@ -1,69 +1,56 @@
 .card_wrapper {
-    width: 18%;
+    width:  40%;
     height: auto;
+    border : 1px solid rgb(221, 198, 154);
+    margin: 2%;
     border-radius: 10px;
-    border: 1px solid rgb(221, 198, 154);
-    margin: 1%;
 }
 
-.title {
-    text-align: center;
-    margin-top: 3%;
-    font-size: 19px;
-    font-style: italic;
-    color: rgb(68, 63, 63);
-    font-weight: 300;
+.card_wrapper:hover {
+    border: 1px solid black;
+}
+
+.card_container {
+    display: flex;
+    flex-direction: row;
+    color: rgb(93, 88, 88);
 }
 
 .image {
-    margin: 2% 2% 2% 2%;
-    display: flex;
-    justify-content: center;
-}
-
-
-.cat {
-    display: flex;
-    justify-content: space-around;
-}
-
-.img_src {
+    margin: 2%;
     height: 250px;
-    width: 100%;
-    border-radius: 4px;
+    width: 35%;
+    border: 1px solid rgb(238, 238, 238);
 }
 
-.categorie,
-.theme {
-    color: rgb(68, 63, 63);
+.info {
+    width: 57%;
+    margin: 2%;
+}
+
+.title {
+    font-size: 19px;
     font-style: italic;
-    font-size: 15px;
-    text-align: justify;
-    margin: 1% 2% 2% 2%;
+    margin: 1% 0% 5% 1%;
+}
+
+.text {
+    margin: 1% 
 }
 
 .description {
-    color: rgb(68, 63, 63);
-    font-size: 16px;
-    margin: 6% 2% 2% 6%;
-    text-align: left;
-    font-weight: 300;
+    margin: 9% 0% 0% 1%;
+}
 
+.theme {
+    margin: 1%;
+    font-size: 12px;text-align: end;
 }
 
 
-.footer {
-    display: flex;
-    justify-content: space-between;
-}
+@media screen and (max-width: 800px) {
 
-.price {
-    text-align: end;
-    margin: 20% 5% 2% 6%;
-    color: rgb(68, 63, 63);
-    font-size: 16px;
-    font-style: italic;
-    font-size: 14px;
-    font-weight: 300;
-
+.card_wrapper {
+    width: 96%;
+    }
 }
