--- a/front/src/style/a_boutique.module.css
+++ b/front/src/style/a_boutique.module.css
@@ -50,6 +50,7 @@
   padding-right: 1%;
   display: flex;
   flex-direction: column;
+  margin-top: 2%;
 }
 
 .create button,
@@ -202,7 +203,7 @@ select {
   padding: 5px 10px;
   overflow: auto;
   text-overflow: ellipsis;
-  text-align: center;
+  text-align: left;
   border-top: 1px solid rgb(221, 198, 154);
 }
 
@@ -254,7 +255,6 @@ select {
   width: 100px;
   display: flex;
   flex-direction: row;
-  ;
 }
 
 .message {
