--- a/front/src/style/boutique.module.css
+++ b/front/src/style/boutique.module.css
@@ -1,8 +1,9 @@
 .cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
     margin: 0% 4% 0% 4%;
+    padding-left: 4%;
     width: 92%;
 }
 
