--- a/front/src/style/shop.module.css
+++ b/front/src/style/shop.module.css
@@ -33,7 +33,7 @@
     width: 100%;
     height: 30px;
     font-size: 19px;
-    /* font-weight: 300; */
+    font-weight: 300;
 }
 
 @media screen and (max-width: 800px) {
