--- a/front/src/style/boutique.module.css
+++ b/front/src/style/boutique.module.css
@@ -7,6 +7,46 @@
     width: 92%;
 }
 
+.filter {
+    display: flex;
+    margin: 1%;
+}
+
+.search {
+    width: 92%;
+    margin: 0% 2% 0% 6%;
+    color: rgb(93, 88, 88);
+}
+.label {
+    width: 8%;
+    padding: 2px 2px 2px 2px;
+}
+
+.label:hover {
+    color: black;
+    cursor: pointer;
+}
+
+.filter_btn {
+    width: 84%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button {
+    border: 1px solid rgb(223, 223, 223);
+    background-color: white;
+    color: rgb(93, 88, 88);
+    padding: 2px 4px 2px 4px;
+    border-radius: 3px;
+    font-size: 14px;
+}
+
+.button:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 800px) {
 
     .cards {
