--- a/front/src/style/boutique.module.css
+++ b/front/src/style/boutique.module.css
@@ -28,7 +28,7 @@
 }
 
 .filter_btn {
-    width: 84%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
 }
@@ -39,12 +39,18 @@
     color: rgb(93, 88, 88);
     padding: 2px 4px 2px 4px;
     border-radius: 3px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .button:hover {
     border: 1px solid black;
     cursor: pointer;
+}
+
+.confirm {
+    display: flex;
+    justify-content: flex-end;
+    width: 7%;
 }
 
 @media screen and (max-width: 800px) {
