--- a/front/src/style/a_boutique.module.css
+++ b/front/src/style/a_boutique.module.css
@@ -53,11 +53,7 @@
   margin-top: 2%;
 }
 
-.create button,
-select {
-  background-color: transparent;
-  border-radius: 4px;
-}
+
 
 .display {
   border: 1px solid rgb(221, 198, 154);
@@ -73,23 +69,11 @@ select {
 
 .theme {
   display: flex;
+  flex-direction: column;
   width: 90%;
   justify-content: space-between;
   margin-bottom: 10px;
   padding: 0% 7% 0% 7%;
-}
-
-.select {
-  margin-left: 5%;
-  border: 1px solid rgb(221, 198, 154);
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  color: rgb(52, 48, 48);
-  font-size: 15px;
-  padding: 2px 2px 2px 2px;
-  width: 70px;
-  text-align: center;
 }
 
 .titre {
@@ -110,6 +94,7 @@ select {
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+
 .description {
   width: 90%;
   margin-left: 7.1%;
@@ -139,21 +124,34 @@ select {
 }
 
 
-.map_button {
+.map_btn {
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 10px;
   background-color: white;
+  border-radius: 4px;
+  border: 1px solid rgb(222, 222, 222);
+  margin: 2px;
 }
 
-.create button {
-  width: 50px;
-  height: 25px;
-  border: 1px solid rgb(221, 198, 154);
+.map_btn:hover {
+  border: 1px solid black;
+  cursor: pointer
 }
 
-.create button:hover {
-  background-color: rgb(221, 198, 154);
+.map_create {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1%;
+}
+
+.map_create button {
+  background-color: white;
+  border: 1px solid rgb(222, 222, 222);
+  border-radius: 4px;
+}
+
+.map_create button:hover {
+  border: 1px solid black;
 }
 
 .card_wrapper {
