--- a/front/src/style/a_user.module.css
+++ b/front/src/style/a_user.module.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   justify-content: center;
   margin-left: 6%;
-
 }
 
 .container {
@@ -15,8 +14,7 @@
   color: rgb(93, 88, 88);
 }
 
-
-/*TABLEAU DES PRDOUITS*/
+/*TABLEAU*/
 
 .tableau {
   width: 93%;
@@ -49,7 +47,6 @@
 }
 
 .tableau .see tbody tr:hover {
-  box-shadow: inset 3px 0px 0px 0px var(--blue3);
   background-color: rgb(249, 249, 249);
   color: rgb(37, 37, 37);
 }
@@ -104,7 +101,6 @@
 }
 
 .tableau .create input {
-  background-color: var(--grey0);
   padding: 5px;
   border-radius: 5px;
   width: 95%;
