--- a/front/src/style/profil.module.css
+++ b/front/src/style/profil.module.css
@@ -1,14 +1,15 @@
 .container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
+    color: rgb(79, 75, 75);
+
 }
 
 .info {
-    margin-left: 6%;
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 40%;
 }
 
 .container label {
@@ -54,4 +55,18 @@
 
 .info_update {
     margin-top: 20px;
+}
+
+.panier {
+    width: 30%;
+    padding: 12px;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 5px;
+}
+
+.test {
+    color: rgb(79, 75, 75);
+    display: flex;
+    justify-content: space-between;
+    padding: 1% 0;
 }
