--- a/front/src/style/a_boutique.module.css
+++ b/front/src/style/a_boutique.module.css
@@ -156,15 +156,20 @@
 /*TABLEAU DES PRDOUITS*/
 
 .search {
-  width: 35%;
+  width: 88%;
   display: flex;
   flex-direction: column;
 }
 
 .filter {
   display: flex;
-  justify-content: space-between;
-  margin: 2%
+  /* justify-content: space-between; */
+  margin: 0.5%
+}
+
+.filter label:hover {
+  cursor: pointer;
+
 }
 
 .filter_btn {
@@ -294,4 +299,8 @@
 .button_del:hover {
   background-color: red;
   color: white;
+}
+
+.search_btn {
+  display: flex;
 }
