--- a/front/src/style/login.module.css
+++ b/front/src/style/login.module.css
@@ -47,7 +47,8 @@
   
   .error {
     color: rgb(219, 35, 35);
-    font-weight: 300;
+    text-align: center;
+    margin-bottom: 32px;
   }
   
   .container input {
@@ -65,7 +66,7 @@
   
   .container .btn {
     display: block;
-    margin: 32px auto;
+    margin: 32px auto 32px auto;
     padding: 10px 20px;
     border-radius: 10px;
     border: 1px solid rgb(221, 198, 154);
