--- a/front/src/style/profil.module.css
+++ b/front/src/style/profil.module.css
@@ -70,3 +70,10 @@
     justify-content: space-between;
     padding: 1% 0;
 }
+
+.check {
+    border: 1px solid;
+    width: 88%;
+    margin: 3% 6%;
+    height: 200px;
+}
