modifs product + css

--- a/front/src/style/aboutme.module.css
+++ b/front/src/style/aboutme.module.css
@@ -3,7 +3,7 @@
     width: 88%;
     margin-left: 6%;
     margin-top: 3%;
-    justify-content: space-between;
+    justify-content: space-around;
     color: rgb(93, 88, 88);
     font-size: 17px;
 }
