--- a/front/src/style/boutique.module.css
+++ b/front/src/style/boutique.module.css
@@ -2,12 +2,18 @@
     display: flex;
 }
 
+.result {
+    display: flex;
+    flex-direction: column;
+    width: 92%;
+    color: rgb(93, 88, 88);
+}
+
 .cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
     width: 92%;
-    /* background-color: red; */
 }
 
 .filter {
@@ -17,7 +23,7 @@
 
 .search {
     width: 10%;
-    margin: 0% 0% 0% 1%;
+    margin: 3% 0% 0% 1%;
     color: rgb(93, 88, 88);
     /* background-color: blue; */
 }
@@ -56,6 +62,15 @@
     justify-content: flex-end;
     width: 7%;
 }
+
+.message {
+    font-weight: 500;
+    margin-top: 1%;
+}
+
+
+
+
 
 
 @media screen and (max-width: 800px) {
