--- a/front/src/style/profil.module.css
+++ b/front/src/style/profil.module.css
@@ -67,8 +67,8 @@
 .test {
     color: rgb(79, 75, 75);
     display: flex;
-    justify-content: space-between;
     padding: 1% 0;
+    margin-top: 2%;
 }
 
 .check {
@@ -76,4 +76,48 @@
     width: 88%;
     margin: 3% 6%;
     height: 200px;
+}
+
+.quantity {
+    width: 15%;
+}
+
+.cart_update {
+    width: 10%;
+    color: blue;
+    border: none;
+    margin-bottom: 2px;
+    background-color: white;
+    margin-right: 5%;
+}
+
+.cart_update:hover {
+cursor: pointer;
+}
+
+.title {
+    width: 60%;
+}
+
+.cart_delete {
+    background-color: white;
+    width: 10%;
+    color: red;
+    border: none;
+    margin-bottom: 2px;;
+}
+
+.cart_delete:hover {
+    cursor: pointer;
+}
+
+.send {
+    background-color: white;
+    border: 1px solid green;
+    border-radius: 4px;
+    color: green;
+    margin-top: 2%;
+    text-align: left;
+    padding: 2px;
+
 }
