--- a/front/src/style/boutique.module.css
+++ b/front/src/style/boutique.module.css
@@ -2,6 +2,7 @@
     display: flex;
 }
 
+/*Afficher les articles et résultats de recherche*/
 .result {
     display: flex;
     flex-direction: column;
@@ -9,6 +10,7 @@
     color: rgb(93, 88, 88);
 }
 
+/*Gérer la mise en page des composants Shop*/
 .cards {
     display: flex;
     flex-wrap: wrap;
@@ -16,8 +18,8 @@
     width: 92%;
 }
 
+/*Gérer les filtres a gauche*/
 .filter {
-    /* display: flex; */
     margin: 1%;
 }
 
@@ -25,8 +27,9 @@
     width: 10%;
     margin: 3% 0% 0% 1%;
     color: rgb(93, 88, 88);
-    /* background-color: blue; */
+
 }
+
 .label {
     width: 10%;
     padding: 2px 2px 2px 2px;
@@ -57,21 +60,12 @@
     color: black;
 }
 
-.confirm {
-    display: flex;
-    justify-content: flex-end;
-    width: 7%;
-}
+
 
 .message {
     font-weight: 500;
     margin-top: 1%;
 }
-
-
-
-
-
 
 @media screen and (max-width: 800px) {
 
