--- a/front/src/style/visuel.module.css
+++ b/front/src/style/visuel.module.css
@@ -2,13 +2,13 @@
     margin-top: 50px;
     color: rgb(93, 88, 88);
 }
-
+/*texte haut de page*/
 .presentation {
     width: 86%;
     margin-left: 7%;
     font-size: 18px;
 }
-
+/*centrer les visuels*/
 .visuel {
     display: flex;
     flex-wrap: wrap;
@@ -51,3 +51,14 @@
     overflow: hidden;
 }
 
+@media screen and (max-width: 480px) {
+.visuel {
+    display: flex;
+    flex-direction: column;
+}
+
+.image, .popup {
+    width: 92%;
+    height: auto;
+}
+}
